--- a/preface.tex
+++ b/preface.tex
@@ -1,7 +1,7 @@
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
 
-The pole shifting theorem is one of the basic results of the theory of linear dynamic systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behaviour by a suitably chosen feedback. This thesis aims to compile all knowledge needed to fully understand the theorem in one place, in a way comprehensive to undergraduate students. To understand this crucial theorem, we must first describe a few basic concepts. 
+The pole shifting theorem claims that in case of controllable systems one can achieve an arbitrary asymptotic behaviour by a suitably chosen feedback. To understand this crucial theorem, we must first describe a few basic concepts. 
 
 We start by defining first order continuous linear dynamical systems with constant coefficients and define an apparatus for solving such systems, that is, the matrix exponential. After that, we define what does it mean for such a system to be stable. Utilizing the matrix exponential, we derive a criterion for the stability expressed using the eigenvalues of the coefficient matrix of the system. This result motivates us to look at the characteristic polynomials of the matrices of coefficients representing such systems. 
 
@@ -11,4 +11,4 @@ The next step is to establish discrete-time systems as special case of the conti
 
 In the section \ref{sec:decomp} we show that the characteristic polynomial of the coefficient matrix of the system can be uniquely split into its controllable and uncontrollable parts. 
 
-Finally, in the third chapter we formulate the pole shifting theorem. It claims, that by a suitable choice of the feedback matrix, in the closed-loop systems, we can set the controllable part of the characteristic monic polynomial of the coefficient matrix representing the system arbitrarily as long as we maintain its degree (depending on the level of controllability of the system). Thus, we obtain a powerful tool for determining the asymptotic behaviour of the system.
+Finally, in the third chapter we formulate the pole shifting theorem. It claims, that by a suitable choice of the feedback matrix, in the closed-loop systems, we can set the controllable part of the characteristic monic polynomial of the coefficient matrix representing the system arbitrarily, as long as we maintain its degree (depending on the level of controllability of the system). Thus, we obtain a powerful tool for determining the asymptotic behaviour of the system.
