--- a/thesis.tex
+++ b/thesis.tex
@@ -101,19 +101,18 @@
 	}
 
 	% Abstract (recommended length around 80-200 words; this is not a copy of your thesis assignment!)
-	\def\Abstract{%
+	\def\AbstractOld{%
 		In this thesis, I describe the notions needed for understanding and proving the pole shifting theorem, as well as the theorem itself. 
-		%I do this by frist defining first order dynamical linear systems with constant coefficients with control and defining controllability of such a system. 
-		I do this by frist defining first order dynamical linear systems with constant coefficients with control and defining controllability and stability of such a system. By looking at the stability of the system I demonstrate that characteristic polynomials of the coefficient matrix representing the system is a valuable indicator of the system's behaviour.
-		Then I show that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems.
-		Using these notions, the pole shifting theorem can be formulated and proved.
 	}
 	\def\Abstract{%
-		The pole-shifting theorem is one of the basic results of the theory of linear dynamic systems with linear feedback. It claims that in case of controllable systems one can achieve an arbitrary asymptotic behaviour by a suitably chosen feedback. This thesis aims to compile all knowledge needed to fully understand the theorem in one place, in a way comprehensive to undergraduate students. 
-		I do this by frist defining first order dynamical linear systems with constant coefficients with control and defining controllability and stability of such a system. By looking at the stability of the system I demonstrate that characteristic polynomials of the coefficient matrix representing the system is a valuable indicator of the system's behaviour. Then I show that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems. Using these notions, the pole-shifting theorem can be formulated and proved.
+		The pole-shifting theorem is one of the basic results of the theory of linear dynamical systems with linear feedback. 
+		%It claims that in case of controllable systems one can achieve an arbitrary asymptotic behaviour by a suitably chosen feedback. 
+		This thesis aims to compile all knowledge needed to fully understand the theorem in one place, in a way comprehensive to undergraduate students. 
+		To do this, I first define first order dynamical linear systems with constant coefficients with control and define the stability of such systems. Examining this property, I demonstrate that the characteristic polynomial of the coefficient matrix representing the system is a valuable indicator of the system's behaviour. Then I show that the definition of controllability motivated by discrete-time systems also holds for continuous-time systems. Using these notions, the pole-shifting theorem is then proved.
 	}
 	\def\AbstractSk{%
-
+	\sloppy
+		Veta o priradení pólov je jeden zo základných výsledkov teórie lineárnych dynamických systémov s lineárnym vstupom. Cieľom tejto práce je skompilovať všetky poznatky potrebné k plnému pochopeniu tejto vety na jednom mieste a to spôsobom zrozumiteľným pre študentov prvých stupňov vysokých škôl. Za týmto účelom najprv definujem dynamické lineárne systémy prvého rádu s konštantnými koeficientmi s riadením a definujem stabilitu týchto systémov. Pri skúmaní tejto vlastnosti demonštrujem, že charakteristický polynóm matice koeficientov reprezentujúcej systém je cenným indikátorom správania sa systému. Následne ukážem, že definícia kontrolovateľnosti motivovaná diskrétnymi systémami platí aj pre systémy so spojitým časom. Použitím týchto pojmov je potom veta o priradení pólov dokázaná.
 	}
 
 	% 3 to 5 keywords (recommended), each enclosed in curly braces
@@ -159,6 +158,7 @@
 \include{preface}
 \include{chap1}
 \include{chap2}
+\include{chap3}
 
 \include{epilog}
 
